fixed gallery images on mobile

--- a/styles/sass/partials/_media.scss
+++ b/styles/sass/partials/_media.scss
@@ -163,6 +163,12 @@
             right: 0;
             border: 10px solid $siteYellow;
         }
+
+        .gallery{
+            img{
+                margin: 0 auto;
+            }
+        }
     }
 
 
